default config change

--- a/cmdbot/sample-bot.ini
+++ b/cmdbot/sample-bot.ini
@@ -1,6 +1,6 @@
 [general]
 host = name.your.server
-chan = #yourchan
+channel = #yourchan #otherchannel,password
 ####
 # The following settings are optional but will have a default value you can
 # change the way you like.
